--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Meta Tags for SEO and proper rendering -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The 208 Venture Challenge</title>
+    <title>The best student king soham</title>
     <meta name="description" content="Official page for The 208 Venture Challenge, the inaugural event for the Robotics and Entrepreneurship clubs.">
 
     <!-- Favicon -->
