--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <!-- Meta Tags for SEO and proper rendering -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The best student king soham</title>
-    <meta name="description" content="Official page for The 208 Venture Challenge, the inaugural event for the Robotics and Entrepreneurship clubs.">
+    <title>Vijaybhoomi Junior College events</title>
+    <meta name="description" content="Official page for Vijaybhoomi Junior College events, the inaugural event for the Robotics and Entrepreneurship clubs.">
 
     <!-- Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏆</text></svg>">
@@ -29,7 +29,7 @@
     <!-- Header -->
     <header class="sticky top-0 z-50 bg-gray-900/80 backdrop-blur-sm border-b border-gray-700">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="/" class="text-xl sm:text-2xl font-bold tracking-tighter"><span class="gradient-text-event">The 208 Challenge</span></a>
+            <a href="/" class="text-xl sm:text-2xl font-bold tracking-tighter"><span class="gradient-text-event">Vijaybhoomi Junior College events</span></a>
             <a href="/" class="bg-indigo-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-indigo-600 transition-transform transform hover:scale-105 text-sm sm:text-base">Back to Main</a>
         </div>
     </header>
@@ -39,7 +39,7 @@
         <!-- Hero Section -->
         <section class="hero-bg py-20 md:py-28 text-center">
             <div class="container mx-auto px-6">
-                <h1 class="text-4xl sm:text-5xl md:text-7xl font-black tracking-tighter">The 208 Venture Challenge</h1>
+                <h1 class="text-4xl sm:text-5xl md:text-7xl font-black tracking-tighter">Vijaybhoomi Junior College events</h1>
                 <p class="mt-4 text-lg sm:text-xl md:text-2xl font-bold gradient-text-event">Build. Compete. Lead.</p>
                 <p class="mt-6 max-w-3xl mx-auto text-gray-400">
                     A full-day, project-based competition to inaugurate the new Robotics & Entrepreneurship Clubs. This is your chance to build real-world skills, create a tangible project for your profile, and earn a leadership position.
@@ -138,7 +138,7 @@
 
     <!-- Footer -->
     <footer class="bg-gray-900 border-t border-gray-700">
-        <div class="container mx-auto px-6 py-6 text-center text-gray-500"><p>&copy; 2025 208 Groups Pvt Ltd. Events Division.</p></div>
+        <div class="container mx-auto px-6 py-6 text-center text-gray-500"><p>&copy; 2024-26 Vijaybhoomi Junior College events. Student lead events.</p></div>
     </footer>
 
     <script> lucide.createIcons(); </script>
