--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section class="section-bg py-20">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl md:text-5xl font-extrabold">Prizes & The Path to Leadership</h2>
-                <p class="mt-4 max-w-2xl mx-auto text-gray-400">The grand prize, podium positions, and club leadership roles are all awarded based on your **individual total score** from both competitions.</p>
+                <p class="mt-4 max-w-2xl mx-auto text-gray-400">The grand prize, podium positions, and club leadership roles are all awarded based on your *individual total score* from both competitions.</p>
                 <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
                     <div class="bg-yellow-500/10 p-8 rounded-2xl border-2 border-yellow-500"><h3 class="text-2xl font-bold text-yellow-400">1st Place Winner</h3><ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside"><li>**₹2,000 Prize**</li><li>*Custom flat 3D print (Black & White Img)*</li><li>Physical 1st Place Certificate</li><li>1st Priority Choice for Club & Leadership Position</li></ul></div>
                     <div class="bg-gray-400/10 p-8 rounded-2xl border border-gray-400"><h3 class="text-2xl font-bold text-gray-300">2nd Place Winner</h3><ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside"><li>*S Custom flat 3D print (Black & White Img)*</li><li>Physical 2nd Place Certificate</li><li>2nd Priority Choice for Club & Leadership Position</li></ul></div>
@@ -100,18 +100,11 @@
         <!-- Pricing Section -->
         <section id="pricing" class="py-20">
             <div class="container mx-auto px-6">
-                <div class="text-center mb-12"><h2 class="text-3xl md:text-5xl font-extrabold">Registration & Fees</h2><p class="mt-4 max-w-2xl mx-auto text-gray-400">A transparent fee structure to fund the clubs and the event. The challenge will only proceed with a minimum of 24 participants.</p></div>
+                <div class="text-center mb-12"><h2 class="text-3xl md:text-5xl font-extrabold">Registration & Fees</h2><p class="mt-4 max-w-2xl mx-auto text-gray-400"> The challenge will only proceed with a minimum of 24 participants.</p></div>
                 <div class="max-w-2xl mx-auto bg-gray-800 rounded-2xl p-8 border border-gray-700">
                     <h3 class="text-2xl font-bold mb-6 text-center">Fee Breakdown</h3>
                     <div class="space-y-4">
-                        <div class="flex justify-between items-center border-b border-gray-700 pb-2"><p>Individual Registration</p><p class="font-bold text-lg"><span class="gradient-text-event">₹165</span></p></div>
-                        <p class="text-sm text-gray-400 -mt-2">Covers your entry, snacks & drinks, and contributes to the prize pool.</p>
-                        <div class="flex justify-between items-center border-b border-gray-700 pb-2"><p>First Duo Formation Fee</p><p class="font-bold text-lg"><span class="gradient-text-event">₹25</span> <span class="text-sm font-normal text-gray-400">(per student)</span></p></div>
-                        <p class="text-sm text-gray-400 -mt-2">A one-time fee for your first competition duo.</p>
-                        <div class="flex justify-between items-center border-b border-gray-700 pb-2"><p>New Duo Fee</p><p class="font-bold text-lg"><span class="gradient-text-event">₹30</span> <span class="text-sm font-normal text-gray-400">(per student)</span></p></div>
-                        <p class="text-sm text-gray-400 -mt-2">A small fee to form a new duo for your second competition.</p>
-                        <div class="flex justify-between items-center border-b border-gray-700 pb-2"><p>Competition Entry</p><p class="font-bold text-lg"><span class="gradient-text-event">₹90</span> <span class="text-sm font-normal text-gray-400">(per event)</span></p></div>
-                        <p class="text-sm text-gray-400 -mt-2">Covers all resources and platforms for each of the two competitions you enter.</p>
+                        <div class="flex justify-between items-center border-b border-gray-700 pb-2"><p>Individual Registration</p><p class="font-bold text-lg"><span class="gradient-text-event">Free for this Event</span></p></div>
                     </div>
                     <div class="mt-8 text-center"><a href="https://chat.whatsapp.com/GDKhxNbl6GHJ1iqowJDI0D" target="_blank" rel="noopener noreferrer" class="w-full md:w-auto inline-block bg-green-500 text-white font-bold py-3 px-8 rounded-lg text-lg hover:bg-green-600 transition-colors">Join Group</a></div>
                 </div>
