--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="max-w-2xl mx-auto bg-gray-800 rounded-2xl p-8 border border-gray-700">
                     <h3 class="text-2xl font-bold mb-6 text-center">Fee Breakdown</h3>
                     <div class="space-y-4">
-                        <div class="flex justify-between items-center border-b border-gray-700 pb-2"><p>Individual Registration</p><p class="font-bold text-lg"><span class="gradient-text-event">Free for this Event</span></p></div>
+                        <div class="flex justify-between items-center border-b border-gray-700 pb-2"><p>Registration Free</p><p class="font-bold text-lg"><span class="gradient-text-event">Free for this Event</span></p></div>
                     </div>
                     <div class="mt-8 text-center"><a href="https://chat.whatsapp.com/GDKhxNbl6GHJ1iqowJDI0D" target="_blank" rel="noopener noreferrer" class="w-full md:w-auto inline-block bg-green-500 text-white font-bold py-3 px-8 rounded-lg text-lg hover:bg-green-600 transition-colors">Join Group</a></div>
                 </div>
